--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: TriTarget.org Development
-subtitle: Home
+subpageTitle: Home
 ---
 {{ site.topicTitlePre }} Recent Activity {{ site.topicTitlePost }}
 {% for post in site.posts limit:10 %}
