dds a few comment link handling in index list

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@ subpageTitle: Home
     {{ site.topicSubtitlePre }} {{ post.title }} - {{ post.date | date_to_string }} {{ site.topicSubtitlePost }}
     {% capture blob %}{{ post.content | strip_html | truncate: 450 | newline_to_br }}{% endcapture %}
     <p>{{ blob }}</p>
-    <p><a class="comment" href="{{ post.url }}#disqus_thread">comment</a>
-    {% if blob.size >= 450 %}
-    : <a class="more" href="{{ post.url }}">Read More &raquo;</a>
+    <p>
+    {% if site.dequsComments %}
+        <a class="comment" href="{{ post.url }}#disqus_thread">comment</a>
+        {% if blob.size >= 450 %} : {% endif %}
     {% endif %}
+    {% if blob.size >= 450 %}<a class="more" href="{{ post.url }}">Read More &raquo;</a>{% endif %}
     </p>
-    <p align="right">&raquo; <a href="#">back to top</a></p>
+    <!-- <p align="right">&raquo; <a href="#">back to top</a></p> -->
 {% endfor %}
