--- a/archives.html
+++ b/archives.html
@@ -3,11 +3,13 @@ layout: default
 title: Archives
 subpageTitle: Archives
 ---
-{{ site.topicTitlePre }} Archives {{ site.topicTitlePost }}
+<h2>Archives</h2>
 <dl>
 {% for post in site.posts %}
+  <div class="post_summery">
     {% capture blob %}{{ post.content | strip_html | strip_newlines | truncate: 140 }}{% endcapture %}
-    <dt><strong>{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></strong></dt>
+    <dt class="news_date"><a href="{{ post.url }}">{{ post.date | date_to_string }} - {{ post.title }}</a></dt>
     <dd>{{ blob }} <nobr><a class="comment" href="{{ post.url }}#disqus_thread">Read</a></nobr></dd>
+  </div>
 {% endfor %}
 </dl>
