--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ subpageTitle: Home
         <a class="comment" href="{{ post.url }}#disqus_thread">comment</a>
         {% if blob.size >= 450 %} : {% endif %}
     {% endif %}
-    {% if blob.size >= 450 %}<a class="more" href="{{ post.url }}">Read More &raquo;</a>{% endif %}
+        <a class="more" href="{{ post.url }}">
+        {% if blob.size >= 450 %}Read More &raquo;{% else %}View{% endif %}
+        </a>
     </p>
     <!-- <p align="right">&raquo; <a href="#">back to top</a></p> -->
   </div>
