--- a/source/404.html
+++ b/source/404.html
@@ -3,7 +3,7 @@ layout: page
 title: Error 404 - Not Found
 footer: false
 ---
-<div style="text-align:center;margin:auto;"><img src="{{ root_url }}images/404.jpg" alt="404 Not found" /></div>
+<div style="text-align:center;margin:auto;"><img src="{{ root_url }}/images/404.jpg" alt="404 Not found" /></div>
 <div style="clear:both;"></div>
 <p>I'm sorry but the page you requested doesn't seem to exists.</p>
 <p>Perhaps you might be interested in one of these pages?</p>
