Adds geocaching badge

--- a/source/badges/index.html
+++ b/source/badges/index.html
@@ -45,6 +45,8 @@ footer: false
 </div>
 <div class="clearfix"></div>
 
-<hr />
+<p><hr /></p>
+<!-- Geocaching -->
+<p><a id="ctl00_ContentBody_lnkProfile" href="http://www.geocaching.com/profile/?guid=634a12ac-b399-4cce-8b82-b011922657e7"><img src="http://img.geocaching.com/stats/img.aspx?txt=View+my+profile&amp;uid=634a12ac-b399-4cce-8b82-b011922657e7" alt="" style="border-width:0px;"></a></p>
 <!-- Magic The Gathering "What Color are you" -->
 <p align="center" style="font-family: arial;"><a href="http://www.wizards.com/magic/playmagic/whatcolorareyou.asp" target="_blank"><img src="http://www.wizards.com/magic/images/whatcolor_isgreen.jpg" border="0"><br/><b>Take the Magic: The Gathering 'What Color Are You?' Quiz.</b></a></p>
