adds photos license

--- a/source/license.html
+++ b/source/license.html
@@ -9,3 +9,5 @@ footer: false
 <div style="padding: 10px;text-align:center;border:thin solid black;border-radius: 6px;-moz-border-radius: 6px;-webkit-border-radius: 6px;">
   <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License</a>.
 </div>
+
+<p>All photos, images, and 360 degree panoramas are <strong>Copyright &copy; {{ site.time | date: "%Y" }} by {{ site.author }}</strong> and also covered under the <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License</a> unless otherwise specified.</p>
