Puts quote back into index page

--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,11 @@
 layout: default
 ---
 
+<div id="site-quote" class="quote">
+  Be a yardstick of quality. Some people aren't used to an environment where excellence is expected.
+  <div class="cite">~ Steve Jobs</div>
+</div>
+
 <div class="blog-index">
   {% assign index = true %}
   {% for post in paginator.posts %}
