Adds Project Euler badge

--- a/source/badges/index.html
+++ b/source/badges/index.html
@@ -46,6 +46,8 @@ footer: false
 <div class="clearfix"></div>
 
 <p><hr /></p>
+<!-- Project Euler -->
+<p><a href="http://projecteuler.net/progress=sukima"><img src="http://projecteuler.net/profile/sukima.png" alt="Project Euler Progress" /></a></p>
 <!-- Geocaching -->
 <p><a id="ctl00_ContentBody_lnkProfile" href="http://www.geocaching.com/profile/?guid=634a12ac-b399-4cce-8b82-b011922657e7"><img src="http://img.geocaching.com/stats/img.aspx?txt=View+my+profile&amp;uid=634a12ac-b399-4cce-8b82-b011922657e7" alt="" style="border-width:0px;"></a></p>
 <!-- Magic The Gathering "What Color are you" -->
