--- a/source/s/index.html
+++ b/source/s/index.html
@@ -6,14 +6,14 @@ comments: false
 sharing: false
 footer: false
 ---
-<div id="error" style="display:none">Unable to find a url for that id. Try one below.</div>
+<div id="error" style="display:none">Unable to find a url for the id <b id="error-id"></b>. Try one below.</div>
 <div id="urls-loading">Loading...</div>
 <ul id="urls"></ul>
-<script src="urls.js" type="text/javascript"></script>
 <script type="text/javascript">
   (function() {
     var s, ShortUrl = require("ShortUrl");
-    s = new ShortUrl(__site_short_urls);
-    s.checkUrl();
+    s = new ShortUrl("urls.json");
+    s.setSiteUrl("{{ site.url }}");
+    s.ready();
   })();
 </script>
