Adds coderwall-jquery badges
Uses jquery coderwall plugin to make badges in /badges/ page.

--- a/source/badges/index.html
+++ b/source/badges/index.html
@@ -46,6 +46,14 @@ footer: false
 <div class="clearfix"></div>
 
 <p><hr /></p>
+<!-- Coderwall.com -->
+<div id="coderwall"></div>
+<script type="text/javascript">
+  $(function() {
+    $("#coderwall").codersWall({team:['sukima']});
+  });
+</script>
+<p><hr /></p>
 <!-- Project Euler -->
 <p><a href="http://projecteuler.net/progress=sukima"><img src="http://projecteuler.net/profile/sukima.png" alt="Project Euler Progress" /></a></p>
 <!-- Geocaching -->
