Adds Stackoverflow badge

--- a/source/badges/index.html
+++ b/source/badges/index.html
@@ -46,17 +46,21 @@ footer: false
 <div class="clearfix"></div>
 
 <p><hr /></p>
-<!-- Coderwall.com -->
-<div id="coderwall"></div>
-<script type="text/javascript">
-  $(function() {
-    $("#coderwall").codersWall({team:['sukima']});
-  });
-</script>
-<p><hr /></p>
+<!-- Stackoverflow.com -->
+<a href="http://stackoverflow.com/users/227176/sukima">
+  <img src="http://stackoverflow.com/users/flair/227176.png" width="208" height="58" alt="profile for Sukima at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Sukima at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+</a>
 <!-- Project Euler -->
 <p><a href="http://projecteuler.net/progress=sukima"><img src="http://projecteuler.net/profile/sukima.png" alt="Project Euler Progress" /></a></p>
 <!-- Geocaching -->
 <p><a id="ctl00_ContentBody_lnkProfile" href="http://www.geocaching.com/profile/?guid=634a12ac-b399-4cce-8b82-b011922657e7"><img src="http://img.geocaching.com/stats/img.aspx?txt=View+my+profile&amp;uid=634a12ac-b399-4cce-8b82-b011922657e7" alt="" style="border-width:0px;"></a></p>
 <!-- Magic The Gathering "What Color are you" -->
 <p align="center" style="font-family: arial;"><a href="http://www.wizards.com/magic/playmagic/whatcolorareyou.asp" target="_blank"><img src="http://www.wizards.com/magic/images/whatcolor_isgreen.jpg" border="0"><br/><b>Take the Magic: The Gathering 'What Color Are You?' Quiz.</b></a></p>
+<!-- Coderwall.com -->
+<p><hr /></p>
+<div id="coderwall"></div>
+<script type="text/javascript">
+  $(function() {
+    $("#coderwall").codersWall({team:['sukima']});
+  });
+</script>
