Fixes bad whitespace

--- a/source/badges/index.html
+++ b/source/badges/index.html
@@ -47,9 +47,7 @@ footer: false
 
 <p><hr /></p>
 <!-- Stackoverflow.com -->
-<a href="http://stackoverflow.com/users/227176/sukima">
-  <img src="http://stackoverflow.com/users/flair/227176.png" width="208" height="58" alt="profile for Sukima at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Sukima at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
-</a>
+<a href="http://stackoverflow.com/users/227176/sukima"><img src="http://stackoverflow.com/users/flair/227176.png" width="208" height="58" alt="profile for Sukima at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Sukima at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
 <!-- Project Euler -->
 <p><a href="http://projecteuler.net/progress=sukima"><img src="http://projecteuler.net/profile/sukima.png" alt="Project Euler Progress" /></a></p>
 <!-- Geocaching -->
