Fixes wording in shorturl

--- a/source/s/index.html
+++ b/source/s/index.html
@@ -9,7 +9,7 @@ footer: false
 <style type="text/css">
   #urls { font-family: monospace; }
 </style>
-<div id="error" style="display:none">Unable to find a url for the id <b id="error-id"></b>. Try one below.</div>
+<div id="error" style="display:none">Unable to find a url for the id <b id="error-id"></b>.</div>
 <div id="urls-loading">Loading...</div>
 <ul id="urls"></ul>
 <script type="text/javascript">
