Adds myfitnesspal ticker

--- a/source/badges/index.html
+++ b/source/badges/index.html
@@ -45,7 +45,9 @@ footer: false
 </div>
 <div class="clearfix"></div>
 
-<p><hr /></p>
+<hr />
+<!-- Myfitnesspal -->
+<a href="http://www.myfitnesspal.com/weight-loss-ticker"><img border="0" src="http://tickers.myfitnesspal.com/ticker/show/2960/7120/29607120.png" /></a><p style="text-align:center;width:420px;"><small>Created by MyFitnessPal - <a href="http://www.myfitnesspal.com">Nutrition Facts</a> For Foods</small></p>
 <!-- Stackoverflow.com -->
 <a href="http://stackoverflow.com/users/227176/sukima"><img src="http://stackoverflow.com/users/flair/227176.png" width="208" height="58" alt="profile for Sukima at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Sukima at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
 <!-- Project Euler -->
@@ -55,7 +57,7 @@ footer: false
 <!-- Magic The Gathering "What Color are you" -->
 <p align="center" style="font-family: arial;"><a href="http://www.wizards.com/magic/playmagic/whatcolorareyou.asp" target="_blank"><img src="http://www.wizards.com/magic/images/whatcolor_isgreen.jpg" border="0"><br/><b>Take the Magic: The Gathering 'What Color Are You?' Quiz.</b></a></p>
 <!-- Coderwall.com -->
-<p><hr /></p>
+<hr />
 <div id="coderwall"></div>
 <script type="text/javascript">
   $(function() {
