Button alignment fixes

--- a/source/devin/projects.html
+++ b/source/devin/projects.html
@@ -6,7 +6,7 @@ showGravatar: true
 ---
 <div data-role="collapsible-set" data-inset="false">
 
-  <div data-role="collapsible" data-collapsed="false">
+  <div data-role="collapsible">
     <h3>Projects</h3>
     {% render_partial projects/_projects.markdown %}
   </div>
@@ -29,6 +29,6 @@ showGravatar: true
 </div>
 
 <a href="{{ root_url }}/blog/categories/coding/" rel="external" data-role="button">
-  <img src="icons/166-newspaper.png" alt="newspaper icon" width="28" height="23">
-  View my blog about programming
+  <img src="icons/166-newspaper.png" alt="newspaper icon" width="28" height="23" valign="middle">
+  View my programming blog
 </a>
