--- a/source/devin/index.html
+++ b/source/devin/index.html
@@ -12,28 +12,28 @@ showGravatar: false
   </div>
   <div class="ui-grid-a">
     <div class="ui-block-a">
-      <a href="about.html" type="button" data-theme="c">
-        <img src="icons/253-person.png" alt="bust Icon" width="26" height="24">
+      <a href="about.html" type="button" data-theme="c" class="nav-buttton">
+        <img src="icons/253-person.png" alt="bust Icon" width="26" height="24"><br>
         About Me
       </a>
     </div>
     <div class="ui-block-b">
-      <a href="contact.html" type="button" data-theme="c">
-        <img src="icons/291-idcard.png" alt="ID badge Icon" width="26" height="21">
+      <a href="contact.html" type="button" data-theme="c" class="nav-buttton">
+        <img src="icons/291-idcard.png" alt="ID badge Icon" width="26" height="21"><br>
         Contact Info
       </a>
     </div>
   </div>
   <div class="ui-grid-a">
     <div class="ui-block-a">
-      <a href="pgp.html" type="button" data-theme="c">
-        <img src="icons/54-lock.png" alt="padlock icon" width="20" height="24">
+      <a href="pgp.html" type="button" data-theme="c" class="nav-buttton">
+        <img src="icons/54-lock.png" alt="padlock icon" width="20" height="24"><br>
         PGP
       </a>
     </div>
     <div class="ui-block-b">
-      <a href="projects.html" type="button" data-theme="c">
-        <img src="icons/91-beaker-2.png" alt="beaker icon" width="20" height="24">
+      <a href="projects.html" type="button" data-theme="c" class="nav-buttton">
+        <img src="icons/91-beaker-2.png" alt="beaker icon" width="20" height="24"><br>
         Projects
       </a>
     </div>
@@ -41,7 +41,7 @@ showGravatar: false
   <div class="ui-grid-solo">
     <div class="ui-block-a">
       <a href="{{ root_url }}/" rel="external" type="button" data-theme="c">
-        <img src="icons/53-house.png" alt="house icon" width="22" height="22">
+        <img src="icons/53-house.png" alt="house icon" width="22" height="22" valign="middle">
         Personal Blog
       </a>
     </div>
