--- a/source/devin/pgp.html
+++ b/source/devin/pgp.html
@@ -5,8 +5,8 @@ backButton: true
 showGravatar: true
 ---
 <ul data-role="listview" data-inset="true">
-  <li><h2>Key ID</h2><p><code>DE767C8A</code></p></li>
-  <li><h2>Fingerprint</h2><p><code>FA9F 1400 8BA5 A847 B097<br>7C06 EBD9 9C92 DE76 7C8A</code></p></li>
+  <li><h2>Key ID</h2><p><tt>{{ site.pgp_key_id }}</tt></p></li>
+  <li><h2>Fingerprint</h2><p><tt>{{ site.pgp_fingerprint1 }}<br>{{ site.pgp_fingerprint2 }}</tt></p></li>
 </ul>
 
 <a href="{{ root_url }}/key" download="DevinWeaver.asc" data-role="button">
