Adds about me bullet points

--- a/source/devin/about.html
+++ b/source/devin/about.html
@@ -4,6 +4,13 @@ title: About Me
 backButton: true
 showGravatar: true
 ---
+<ul>
+  <li>A JavaScript Expert</li>
+  <li>A CoffeeScript Expert</li>
+  <li>Wrote CoffeeScript plugin for the new CLI build system (<a href="http://sukima.github.io/ti_coffee_plugin"><code>ti_coffee_plugin</code></a>)</li>
+  <li>Work for <a href="http://seeclickfic.com">SeeClickFix.com</a></li>
+  <li>GitHub <a href="https://github.com/sukima">@sukima</a></li>
+</ul>
 
 <div data-role="collapsible">
   <h4>Bio</h4>
