Add second life contact info

--- a/source/devin/contact.html
+++ b/source/devin/contact.html
@@ -60,6 +60,13 @@ showGravatar: true
       <p>http://tritarget.org/</p>
     </a>
   </li>
+  <li>
+    <a href="https://my.secondlife.com/sukima.yokosuka">
+      <img src="icons/SLLogo.png" alt="Second Life Logo">
+      <h2>Second Life</h2>
+      <p>Sukima Yokosuka</p>
+    </a>
+  </li>
 </ul>
 
 <p class="table-bottom">
