Move partials to fragments
Used to include via AJAX  in the devin-contact-app

--- a/source/projects/index.html
+++ b/source/projects/index.html
@@ -12,22 +12,22 @@ footer: false
 
   <h3>Projects</h3>
   <div>
-    {% render_partial projects/_projects.markdown %}
+    {% render_partial projects/projects.markdown %}
   </div>
 
   <h3>Sample Code</h3>
   <div>
-    {% render_partial projects/_exercises.markdown %} 
+    {% render_partial projects/exercises.markdown %}
   </div>
 
   <h3>Deprecated and Outdated</h3>
   <div>
-    {% render_partial projects/_deprecated.markdown %}
+    {% render_partial projects/deprecated.markdown %}
   </div>
 
   <h3>Incubator</h3>
   <div>
-    {% render_partial projects/_incubator.markdown %}
+    {% render_partial projects/incubator.markdown %}
   </div>
 
   <h3>Blog Posts About Coding</h3>
