Place arcive lists into panel

--- a/src/archives.html
+++ b/src/archives.html
@@ -2,8 +2,10 @@
 title: Archives
 template: page.hbs
 ---
-<div class="list-group">
-{{#each blog}}
-  {{> blog_list_item}}
-{{/each}}
+<div class="panel panel-default">
+  <div class="list-group">
+  {{#each blog}}
+    {{> blog_list_item}}
+  {{/each}}
+  </div>
 </div>
