Move archives to template
The order of processing requires permalink to be AFTER markdown however
it is permalink who creates the `path` variable. Since the archives
needs this we have to place the logic into a template which is processed
after permalinks in the plugin order.

--- a/src/archives.html
+++ b/src/archives.html
@@ -1,11 +1,5 @@
 ---
 title: Archives
-template: page.hbs
+template: archives.hbs
+preTemplate: false
 ---
-<div class="panel panel-default">
-  <div class="list-group">
-  {{#each blog}}
-    {{> blog_list_item}}
-  {{/each}}
-  </div>
-</div>
