DRY Link to tags from topic pages
Since the preTemplate processing happens prior to the permalinks plugin
(which adds the `path` variable) it can't link to each post in the loop
(path is still undefined at this point in the chain) So instead have a
big button that links the user to the category/ page for that tag and
include a total number of posts in the tag.

--- a/src/projects.html
+++ b/src/projects.html
@@ -2,6 +2,8 @@
 title: Projects
 template: page.hbs
 ---
+{{> category_link tag="coding" list=tags.coding}}
+
 <p>Click on a section to view or hide it.</p>
 
 <div class="panel-group" id="accordion">
