Fix stying in badge.html

--- a/src/badges.html
+++ b/src/badges.html
@@ -5,7 +5,7 @@ comments: false
 ---
 <div class="pull-left">
   <h4>Hacking</h4>
-  <ul>
+  <ul class="badge-list">
     <li><a class="favorite" href="http://git-scm.com/">Git</a> - VCS</li>
     <li><a class="favorite" href="http://vim.org/">VIM</a> - Editor</li>
     <li><a class="silver" href="http://www.vimperator.org/">Viperator</a> - FF Plugin</li>
@@ -13,34 +13,34 @@ comments: false
   </ul>
 
   <h4>Browsers</h4>
-  <ul>
+  <ul class="badge-list">
     <li><a class="favorite" href="http://getfirefox.com">Firefox</a></li>
     <li><a href="http://www.google.com/chrome">Google Chrome</a></li>
   </ul>
 
   <h4>Technology</h4>
-  <ul>
+  <ul class="badge-list">
     <li><a class="gold" href="http://nodejs.org">Node.js</a></li>
   </ul>
 </div>
 
 <div class="pull-right">
   <h4>Languages</h4>
-  <ul>
+  <ul class="badge-list">
     <li><a class="gold" href="http://coffeescriot.org/">CoffeeScript</a></li>
     <li><a class="silver" href="http://en.wikipedia.org/wiki/JavaScript">JavaScript</a></li>
     <li><a class="bronze" href="http://en.wikipedia.org/wiki/Ruby_%28programming_language%29">Ruby</a></li>
   </ul>
 
   <h4>Operating Systems</h4>
-  <ul>
+  <ul class="badge-list">
     <li><a class="gold" href="http://www.linux.org/">Linux</a></li>
     <li><a class="silver" href="http://www.apple.com/macosx">Mac OS X</a></li>
     <li><a class="silver" href="http://en.wikipedia.org/wiki/IPhone_OS">iPhone OS</a></li>
   </ul>
 
   <h4>Recommendations</h4>
-  <ul>
+  <ul class="badge-list">
     <li><a class="favorite" href="http://www.ubuntu.com/">Ubuntu</a></li>
     <li><a href="http://www.apple.com/">Apple</a></li>
   </ul>
